Fixes menu alignment, some font sizes.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -65,11 +65,10 @@ header {
             .button:hover {
                 background-color: $nav-hover;
             }
-
-            display: none;
             li {
                 height: 5rem;
                 margin-bottom: 0;
+                text-align: right;
             }
         }
         #menu-btn:hover + .menu-wrap{
@@ -82,7 +81,6 @@ header {
 main, footer {
     background-color: lighten($main-bg, 23%);
     position: relative;
-    top: 5rem;
 }
 
 main a:hover {
@@ -102,7 +100,7 @@ section {
         margin-right: .45em;
     }
     p  {
-        font-size: 1.7em;
+        font-size: 1.5em;
         margin-bottom: .5em;
     }
     .sub-one{
@@ -125,8 +123,7 @@ section {
         text-align: center;
     }
     .project {
-        padding-top: 3em;
-        padding-bottom: 3em;
+        padding: auto 1em;
         display: flex;
         flex-wrap: nowrap;
         justify-content: center;
@@ -200,9 +197,9 @@ section {
     #flickrMap {
         background-color: darken($header-bg, 3%);
         background-color: #a3ccff;
-        background-image: url('../img/flickrap-cover.png');
+        background-image: url('../img/flickrmap-cover.png');
         background-repeat: no-repeat;
-        background-position: 0 30px;
+        background-position: 0 0;
         .button-primary {
             background-color: #2A3962;
             border-color: #2A3962;
@@ -212,6 +209,8 @@ section {
 }
 
 .advocacy {
+    margin: auto;
+    padding-top: 2em;
     height: calc(#{$ht-def} - 5rem);
     .info-wrap {
         height: 100%;
@@ -221,8 +220,10 @@ section {
         }
     }
     article {
+        margin-top: .5em;
+        margin-bottom: .5em;
         h2 {
-            margin: 1.75em;
+            margin: auto 1.75em;
         }
         h3 {
             font-size: 1.4em;
@@ -238,25 +239,28 @@ section {
 
 
 .contact{
+    padding-top: 2em;
     color: $main-color;
     height: 20rem;
 
-    info-wrap {
-        height: 100%;
+    .info-wrap {
+        height: auto;
     }
 
     .row{
         text-align: center;
         h1,p {
             display: inline-block;
+            font-size: 1.8em;
+            margin: 0 auto;
         }
         p {
+            font-size: 1.5em;
             margin-left: .25em;
-            font-size: 3em;
         }
         .sub-two {
             display: block;
-            font-size: 1.4em;
+            font-size: .9em;
         }
     }
 }
@@ -376,11 +380,10 @@ footer {
                 .button {
                     display: inline-flex;
                     flex-direction: column;
-                    align-items: center;
-                    justify-content: center;
 
                     li {
                         width: 105px;
+                        align-items: center;
                     }
                 }
             }
